--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    margin: 0;
+    padding: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App {
+    font-family: sans-serif;
+    text-align: center;
+    background-color: bisque;
+    margin: 0;
+    padding: 5px;
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    margin-top: 2rem;
   }
-}
+  .card {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 1rem;
+    width: 250px;
+    height: 75px;
+    border: 1px solid black;
+    border-radius: 14px;
+    margin: 0.4rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    background-color: darkkhaki;
+    color: whitesmoke;
+    transition: transform 0.2s;
+  }
+  .user-form {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .card:hover {
+    color: lightgoldenrodyellow;
+    transform: scale(1.1);
+  }
+  .profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    margin-right: 0.5rem;
+  }
+  .profile-name {
+    font-family: "Montserrat", sans-serif;
+  }
+  .button {
+    padding: 0.46rem;
+  }
+  input {
+    height: 1.2rem;
+  }
+  
